# VIGILIA-MatIA

./: .gitignore  AGENTS.md  Modelfile  README.md  run_vigilia.sh  test_conserje.py  vigilia.py
vigilia-m4-gds3725/: .env.example  .gitignore  README.md  pyproject.toml
vigilia-m4-gds3725/app/: __init__.py  config.py  main.py  runtime_paths.py
vigilia-m4-gds3725/config/: app.example.yaml  residents.example.yaml
vigilia-m4-gds3725/docs/: architecture.md  baresip-inbox-contract.md  flows.md  gds3725-first-setup.md  instalacion-baresip-macos.md  integracion-baresip-inbox.md  integracion-baresip-reply-audio.md  mac-mini-m4-preparacion.md  matia-como-agente-conversacional.md  openvoice-matia.md
vigilia-m4-gds3725/launchd/: com.vigilia.matia-gds.plist.example
vigilia-m4-gds3725/scripts/: abrir_con_rostro_identificable.sh  bootstrap_mac_mini.sh  bootstrap_ollama.sh  bootstrap_openvoice.sh  deposit_baresip_inbox.sh  deposit_department_reply_audio.sh  matia_gds_service.sh  prepare_baresip_runtime.sh  process_gds_capture_and_open.sh  process_gds_capture_whisper.sh  record_matia_voice_sample.sh  run_audio_file_test.sh  run_baresip_local.sh  run_baresip_preview.sh  run_decision_test.sh  run_full_dry_run.sh  run_gds_hello_then_open.sh  run_session_replay.sh  run_sip_preview.sh  run_sip_session.sh  verify_mac_mini_ready.sh  verify_ollama_ready.sh  verify_openvoice_ready.sh
vigilia-m4-gds3725/services/: __init__.py
vigilia-m4-gds3725/tests/: test_audio_file_flow.py  test_baresip_hello_runtime.py  test_baresip_outgoing_call_executor.py  test_baresip_outgoing_call_runner.py  (+15 more)
(+179 files in other folders)
